antlr/BabyDuckParser.py
# Generated from BabyDuck.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BabyDuckParser ( Parser ):

    grammarFileName = "BabyDuck.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'program'", "';'", "'main'", "'end'", 
                     "'var'", "','", "':'", "'int'", "'float'", "'if'", 
                     "'else'", "'{'", "'}'", "'print'", "'('", "')'", "'='", 
                     "'while'", "'do'", "'>'", "'<'", "'!='", "'+'", "'-'", 
                     "'*'", "'/'", "'void'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "PROGRAM", "SEMI_COLON", "MAIN", "END", 
                      "VAR", "COMMA", "COLON", "INT", "FLOAT", "IF", "ELSE", 
                      "LEFT_CURLY_BRACE", "RIGHT_CURLY_BRACE", "PRINT", 
                      "LEFT_PARENTHESIS", "RIGHT_PARENTHESIS", "ASSIGN", 
                      "WHILE", "DO", "GREATER_THAN", "LESS_THAN", "NOT_EQUALS", 
                      "PLUS", "MINUS", "TIMES", "DIVIDE", "VOID", "LEFT_BRACKET", 
                      "RIGHT_BRACKET", "CTE_FLOAT", "CTE_INT", "CTE_STRING", 
                      "ID", "WHITESPACE" ]

    RULE_epsilon = 0
    RULE_program_id = 1
    RULE_main = 2
    RULE_programa = 3
    RULE_dec_vars = 4
    RULE_dec_funcs = 5
    RULE_var_id = 6
    RULE_var_type = 7
    RULE_vars = 8
    RULE_vars_content = 9
    RULE_mas_vars_content = 10
    RULE_list_id = 11
    RULE_type = 12
    RULE_func_id = 13
    RULE_funcs = 14
    RULE_list_params = 15
    RULE_body = 16
    RULE_dec_statement = 17
    RULE_statement = 18
    RULE_assign = 19
    RULE_condition = 20
    RULE_cycle = 21
    RULE_f_call = 22
    RULE_list_expression = 23
    RULE_print = 24
    RULE_print_args = 25
    RULE_expression_operation = 26
    RULE_expression = 27
    RULE_exp_operation = 28
    RULE_exp = 29
    RULE_termino_operation = 30
    RULE_termino = 31
    RULE_factor = 32
    RULE_factor_with_parenthesis = 33
    RULE_factor_with_id = 34
    RULE_factor_with_cte = 35
    RULE_factor_sign = 36
    RULE_cte = 37

    ruleNames =  [ "epsilon", "program_id", "main", "programa", "dec_vars", 
                   "dec_funcs", "var_id", "var_type", "vars", "vars_content", 
                   "mas_vars_content", "list_id", "type", "func_id", "funcs", 
                   "list_params", "body", "dec_statement", "statement", 
                   "assign", "condition", "cycle", "f_call", "list_expression", 
                   "print", "print_args", "expression_operation", "expression", 
                   "exp_operation", "exp", "termino_operation", "termino", 
                   "factor", "factor_with_parenthesis", "factor_with_id", 
                   "factor_with_cte", "factor_sign", "cte" ]

    EOF = Token.EOF
    PROGRAM=1
    SEMI_COLON=2
    MAIN=3
    END=4
    VAR=5
    COMMA=6
    COLON=7
    INT=8
    FLOAT=9
    IF=10
    ELSE=11
    LEFT_CURLY_BRACE=12
    RIGHT_CURLY_BRACE=13
    PRINT=14
    LEFT_PARENTHESIS=15
    RIGHT_PARENTHESIS=16
    ASSIGN=17
    WHILE=18
    DO=19
    GREATER_THAN=20
    LESS_THAN=21
    NOT_EQUALS=22
    PLUS=23
    MINUS=24
    TIMES=25
    DIVIDE=26
    VOID=27
    LEFT_BRACKET=28
    RIGHT_BRACKET=29
    CTE_FLOAT=30
    CTE_INT=31
    CTE_STRING=32
    ID=33
    WHITESPACE=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class EpsilonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BabyDuckParser.RULE_epsilon

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEpsilon" ):
                listener.enterEpsilon(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEpsilon" ):
                listener.exitEpsilon(self)




    def epsilon(self):

        localctx = BabyDuckParser.EpsilonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_epsilon)
        try:
            self.enterOuterAlt(localctx, 1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Program_idContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BabyDuckParser.ID, 0)

        def getRuleIndex(self):
            return BabyDuckParser.RULE_program_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram_id" ):
                listener.enterProgram_id(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram_id" ):
                listener.exitProgram_id(self)




    def program_id(self):

        localctx = BabyDuckParser.Program_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program_id)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(BabyDuckParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MAIN(self):
            return self.getToken(BabyDuckParser.MAIN, 0)

        def getRuleIndex(self):
            return BabyDuckParser.RULE_main

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain" ):
                listener.enterMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain" ):
                listener.exitMain(self)




    def main(self):

        localctx = BabyDuckParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_main)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(BabyDuckParser.MAIN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(BabyDuckParser.PROGRAM, 0)

        def program_id(self):
            return self.getTypedRuleContext(BabyDuckParser.Program_idContext,0)


        def SEMI_COLON(self):
            return self.getToken(BabyDuckParser.SEMI_COLON, 0)

        def dec_vars(self):
            return self.getTypedRuleContext(BabyDuckParser.Dec_varsContext,0)


        def dec_funcs(self):
            return self.getTypedRuleContext(BabyDuckParser.Dec_funcsContext,0)


        def main(self):
            return self.getTypedRuleContext(BabyDuckParser.MainContext,0)


        def body(self):
            return self.getTypedRuleContext(BabyDuckParser.BodyContext,0)


        def END(self):
            return self.getToken(BabyDuckParser.END, 0)

        def getRuleIndex(self):
            return BabyDuckParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = BabyDuckParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(BabyDuckParser.PROGRAM)
            self.state = 83
            self.program_id()
            self.state = 84
            self.match(BabyDuckParser.SEMI_COLON)
            self.state = 85
            self.dec_vars()
            self.state = 86
            self.dec_funcs()
            self.state = 87
            self.main()
            self.state = 88
            self.body()
            self.state = 89
            self.match(BabyDuckParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dec_varsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def epsilon(self):
            return self.getTypedRuleContext(BabyDuckParser.EpsilonContext,0)


        def vars_(self):
            return self.getTypedRuleContext(BabyDuckParser.VarsContext,0)


        def getRuleIndex(self):
            return BabyDuckParser.RULE_dec_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDec_vars" ):
                listener.enterDec_vars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDec_vars" ):
                listener.exitDec_vars(self)




    def dec_vars(self):

        localctx = BabyDuckParser.Dec_varsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_dec_vars)
        try:
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 12, 27]:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.epsilon()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.vars_()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dec_funcsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def epsilon(self):
            return self.getTypedRuleContext(BabyDuckParser.EpsilonContext,0)


        def funcs(self):
            return self.getTypedRuleContext(BabyDuckParser.FuncsContext,0)


        def dec_funcs(self):
            return self.getTypedRuleContext(BabyDuckParser.Dec_funcsContext,0)


        def getRuleIndex(self):
            return BabyDuckParser.RULE_dec_funcs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDec_funcs" ):
                listener.enterDec_funcs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDec_funcs" ):
                listener.exitDec_funcs(self)




    def dec_funcs(self):

        localctx = BabyDuckParser.Dec_funcsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_dec_funcs)
        try:
            self.state = 99
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.epsilon()
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.funcs()
                self.state = 97
                self.dec_funcs()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_idContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BabyDuckParser.ID, 0)

        def getRuleIndex(self):
            return BabyDuckParser.RULE_var_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_id" ):
                listener.enterVar_id(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_id" ):
                listener.exitVar_id(self)




    def var_id(self):

        localctx = BabyDuckParser.Var_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var_id)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(BabyDuckParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(BabyDuckParser.TypeContext,0)


        def getRuleIndex(self):
            return BabyDuckParser.RULE_var_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_type" ):
                listener.enterVar_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_type" ):
                listener.exitVar_type(self)




    def var_type(self):

        localctx = BabyDuckParser.Var_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_var_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BabyDuckParser.VAR, 0)

        def vars_content(self):
            return self.getTypedRuleContext(BabyDuckParser.Vars_contentContext,0)


        def getRuleIndex(self):
            return BabyDuckParser.RULE_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars" ):
                listener.enterVars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars" ):
                listener.exitVars(self)




    def vars_(self):

        localctx = BabyDuckParser.VarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_vars)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(BabyDuckParser.VAR)
            self.state = 106
            self.vars_content()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vars_contentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_id(self):
            return self.getTypedRuleContext(BabyDuckParser.List_idContext,0)


        def COLON(self):
            return self.getToken(BabyDuckParser.COLON, 0)

        def var_type(self):
            return self.getTypedRuleContext(BabyDuckParser.Var_typeContext,0)


        def SEMI_COLON(self):
            return self.getToken(BabyDuckParser.SEMI_COLON, 0)

        def mas_vars_content(self):
            return self.getTypedRuleContext(BabyDuckParser.Mas_vars_contentContext,0)


        def getRuleIndex(self):
            return BabyDuckParser.RULE_vars_content

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars_content" ):
                listener.enterVars_content(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars_content" ):
                listener.exitVars_content(self)




    def vars_content(self):

        localctx = BabyDuckParser.Vars_contentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_vars_content)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.list_id()
            self.state = 109
            self.match(BabyDuckParser.COLON)
            self.state = 110
            self.var_type()
            self.state = 111
            self.match(BabyDuckParser.SEMI_COLON)
            self.state = 112
            self.mas_vars_content()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mas_vars_contentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def epsilon(self):
            return self.getTypedRuleContext(BabyDuckParser.EpsilonContext,0)


        def vars_content(self):
            return self.getTypedRuleContext(BabyDuckParser.Vars_contentContext,0)


        def getRuleIndex(self):
            return BabyDuckParser.RULE_mas_vars_content

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMas_vars_content" ):
                listener.enterMas_vars_content(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMas_vars_content" ):
                listener.exitMas_vars_content(self)




    def mas_vars_content(self):

        localctx = BabyDuckParser.Mas_vars_contentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_mas_vars_content)
        try:
            self.state = 116
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 12, 27]:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.epsilon()
                pass
            elif token in [33]:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.vars_content()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_idContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_id(self):
            return self.getTypedRuleContext(BabyDuckParser.Var_idContext,0)


        def COMMA(self):
            return self.getToken(BabyDuckParser.COMMA, 0)

        def list_id(self):
            return self.getTypedRuleContext(BabyDuckParser.List_idContext,0)


        def getRuleIndex(self):
            return BabyDuckParser.RULE_list_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList_id" ):
                listener.enterList_id(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList_id" ):
                listener.exitList_id(self)




    def list_id(self):

        localctx = BabyDuckParser.List_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_list_id)
        try:
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.var_id()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.var_id()
                self.state = 120
                self.match(BabyDuckParser.COMMA)
                self.state = 121
                self.list_id()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(BabyDuckParser.INT, 0)

        def FLOAT(self):
            return self.getToken(BabyDuckParser.FLOAT, 0)

        def getRuleIndex(self):
            return BabyDuckParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type_(self):

        localctx = BabyDuckParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            _la = self._input.LA(1)
            if not(_la==8 or _la==9):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_idContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BabyDuckParser.ID, 0)

        def getRuleIndex(self):
            return BabyDuckParser.RULE_func_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_id" ):
                listener.enterFunc_id(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_id" ):
                listener.exitFunc_id(self)




    def func_id(self):

        localctx = BabyDuckParser.Func_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_func_id)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(BabyDuckParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VOID(self):
            return self.getToken(BabyDuckParser.VOID, 0)

        def func_id(self):
            return self.getTypedRuleContext(BabyDuckParser.Func_idContext,0)


        def LEFT_PARENTHESIS(self):
            return self.getToken(BabyDuckParser.LEFT_PARENTHESIS, 0)

        def list_params(self):
            return self.getTypedRuleContext(BabyDuckParser.List_paramsContext,0)


        def RIGHT_PARENTHESIS(self):
            return self.getToken(BabyDuckParser.RIGHT_PARENTHESIS, 0)

        def LEFT_BRACKET(self):
            return self.getToken(BabyDuckParser.LEFT_BRACKET, 0)

        def dec_vars(self):
            return self.getTypedRuleContext(BabyDuckParser.Dec_varsContext,0)


        def body(self):
            return self.getTypedRuleContext(BabyDuckParser.BodyContext,0)


        def RIGHT_BRACKET(self):
            return self.getToken(BabyDuckParser.RIGHT_BRACKET, 0)

        def SEMI_COLON(self):
            return self.getToken(BabyDuckParser.SEMI_COLON, 0)

        def getRuleIndex(self):
            return BabyDuckParser.RULE_funcs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncs" ):
                listener.enterFuncs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncs" ):
                listener.exitFuncs(self)




    def funcs(self):

        localctx = BabyDuckParser.FuncsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_funcs)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(BabyDuckParser.VOID)
            self.state = 130
            self.func_id()
            self.state = 131
            self.match(BabyDuckParser.LEFT_PARENTHESIS)
            self.state = 132
            self.list_params()
            self.state = 133
            self.match(BabyDuckParser.RIGHT_PARENTHESIS)
            self.state = 134
            self.match(BabyDuckParser.LEFT_BRACKET)
            self.state = 135
            self.dec_vars()
            self.state = 136
            self.body()
            self.state = 137
            self.match(BabyDuckParser.RIGHT_BRACKET)
            self.state = 138
            self.match(BabyDuckParser.SEMI_COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_paramsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def epsilon(self):
            return self.getTypedRuleContext(BabyDuckParser.EpsilonContext,0)


        def var_id(self):
            return self.getTypedRuleContext(BabyDuckParser.Var_idContext,0)


        def COLON(self):
            return self.getToken(BabyDuckParser.COLON, 0)

        def var_type(self):
            return self.getTypedRuleContext(BabyDuckParser.Var_typeContext,0)


        def COMMA(self):
            return self.getToken(BabyDuckParser.COMMA, 0)

        def list_params(self):
            return self.getTypedRuleContext(BabyDuckParser.List_paramsContext,0)


        def getRuleIndex(self):
            return BabyDuckParser.RULE_list_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList_params" ):
                listener.enterList_params(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList_params" ):
                listener.exitList_params(self)




    def list_params(self):

        localctx = BabyDuckParser.List_paramsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_list_params)
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.epsilon()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self.var_id()
                self.state = 142
                self.match(BabyDuckParser.COLON)
                self.state = 143
                self.var_type()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 145
                self.var_id()
                self.state = 146
                self.match(BabyDuckParser.COLON)
                self.state = 147
                self.var_type()
                self.state = 148
                self.match(BabyDuckParser.COMMA)
                self.state = 149
                self.list_params()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_CURLY_BRACE(self):
            return self.getToken(BabyDuckParser.LEFT_CURLY_BRACE, 0)

        def dec_statement(self):
            return self.getTypedRuleContext(BabyDuckParser.Dec_statementContext,0)


        def RIGHT_CURLY_BRACE(self):
            return self.getToken(BabyDuckParser.RIGHT_CURLY_BRACE, 0)

        def getRuleIndex(self):
            return BabyDuckParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)




    def body(self):

        localctx = BabyDuckParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(BabyDuckParser.LEFT_CURLY_BRACE)
            self.state = 154
            self.dec_statement()
            self.state = 155
            self.match(BabyDuckParser.RIGHT_CURLY_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dec_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def epsilon(self):
            return self.getTypedRuleContext(BabyDuckParser.EpsilonContext,0)


        def statement(self):
            return self.getTypedRuleContext(BabyDuckParser.StatementContext,0)


        def dec_statement(self):
            return self.getTypedRuleContext(BabyDuckParser.Dec_statementContext,0)

